import java.util.List;

public class Groupe {
    Formation formation;
    List<Etudiant> etudiants;
}
