import java.util.Comparator;

public class TriParMerite implements Comparator<Etudiant> {
    @Override
    public int compare(Etudiant etudiant, Etudiant t1) {
        return 0;
    }
}
